--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "echarts": "^4.2.1",
     "element-ui": "^2.7.2",
     "font-awesome": "^4.7.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
+    "stylus": "^0.54.5",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
